[gd_scene load_steps=16 format=3 uid="uid://dx2c4q1hgknf3"]

[ext_resource type="Script" uid="uid://dopge0366slmj" path="res://scripts/main/episode_story_list.gd" id="1_sd7rw"]
[ext_resource type="Texture2D" uid="uid://us58al1545mi" path="res://assets/gui/main_menu/juqing_bottm_da.png" id="3_tcsvo"]
[ext_resource type="Texture2D" uid="uid://dj1bqw3cwqabj" path="res://assets/gui/main_menu/juqing_bottm_tuan.png" id="4_p73h5"]
[ext_resource type="Texture2D" uid="uid://d15fjmf3eklug" path="res://assets/gui/main_menu/story_list_connect.png" id="5_urbln"]
[ext_resource type="Texture2D" uid="uid://dp3unq81sfu0a" path="res://assets/gui/main_menu/story_list_upback.png" id="6_sd7rw"]
[ext_resource type="Texture2D" uid="uid://cgb5cip2giiiq" path="res://assets/gui/main_menu/story_list_bottomui.png" id="7_07873"]
[ext_resource type="FontFile" uid="uid://bajyd14et5o6v" path="res://assets/gui/font/方正兰亭准黑_GBK.ttf" id="8_tcsvo"]
[ext_resource type="LabelSettings" uid="uid://dijm0jkrkte7x" path="res://scripts/set/list_font.tres" id="9_sd7rw"]
[ext_resource type="Texture2D" uid="uid://c4phl513cnhqy" path="res://assets/gui/main_menu/story_btn_idle.png" id="10_07873"]
[ext_resource type="Texture2D" uid="uid://b0v166ie8rp32" path="res://assets/gui/main_menu/story_btn_hover.png" id="11_h41dl"]
[ext_resource type="Texture2D" uid="uid://by3mrphxnbbd0" path="res://assets/gui/main_menu/story_btn_insensitive.png" id="12_ilne5"]

[sub_resource type="FontVariation" id="FontVariation_urbln"]
base_font = ExtResource("8_tcsvo")

[sub_resource type="LabelSettings" id="LabelSettings_sd7rw"]
font = SubResource("FontVariation_urbln")
font_size = 31
shadow_size = 0

[sub_resource type="Gradient" id="Gradient_x7cxk"]
colors = PackedColorArray(0.933333, 0.941176, 0.94902, 1, 0.729412, 0.729412, 0.729412, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tcsvo"]
gradient = SubResource("Gradient_x7cxk")
height = 30
fill_from = Vector2(0, 0.00609756)
fill_to = Vector2(0, 1)

[node name="EpisodeStoryList" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sd7rw")

[node name="MovePart" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StoryListBack" type="Sprite2D" parent="MovePart"]
position = Vector2(1006.7, 360)
scale = Vector2(0.958947, 0.96)
texture = ExtResource("3_tcsvo")

[node name="StoryListBackImage" type="Sprite2D" parent="MovePart"]
position = Vector2(1189.88, 362)
scale = Vector2(0.958723, 0.96)
texture = ExtResource("4_p73h5")

[node name="StoryListUpback" type="Sprite2D" parent="MovePart"]
position = Vector2(1040, 96)
texture = ExtResource("6_sd7rw")

[node name="EpisodeName" type="Label" parent="MovePart"]
clip_children = 2
layout_mode = 0
offset_left = 798.0
offset_top = 73.0
offset_right = 1175.0
offset_bottom = 112.0
text = "想保护的她，被守护的你"
label_settings = SubResource("LabelSettings_sd7rw")

[node name="VGradient" type="TextureRect" parent="MovePart/EpisodeName"]
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 390.0
offset_bottom = 33.0
texture = SubResource("GradientTexture2D_tcsvo")

[node name="StoryList" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 117.0
offset_right = 1308.0
offset_bottom = 745.0
scale = Vector2(0.96, 0.96)
horizontal_scroll_mode = 0

[node name="StoryListContainer" type="VBoxContainer" parent="StoryList"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ListItem" type="MarginContainer" parent="StoryList/StoryListContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11
theme_override_constants/margin_bottom = -4

[node name="ListItemImg" type="TextureButton" parent="StoryList/StoryListContainer/ListItem"]
layout_mode = 2
texture_normal = ExtResource("10_07873")
texture_hover = ExtResource("11_h41dl")
texture_disabled = ExtResource("12_ilne5")

[node name="CenterContainer" type="CenterContainer" parent="StoryList/StoryListContainer/ListItem/ListItemImg"]
layout_mode = 0
offset_right = 538.0
offset_bottom = 114.0

[node name="ListItemName" type="Label" parent="StoryList/StoryListContainer/ListItem/ListItemImg/CenterContainer"]
layout_mode = 2
text = "秘密情报局"
label_settings = ExtResource("9_sd7rw")

[node name="StoryListBottomui" type="Sprite2D" parent="."]
position = Vector2(995.92, 651.68)
scale = Vector2(0.959729, 0.955524)
texture = ExtResource("7_07873")

[node name="StoryListConnect" type="Sprite2D" parent="."]
position = Vector2(955, 158)
scale = Vector2(0.96, 0.96)
texture = ExtResource("5_urbln")
